--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
  <head>
-   <title>title</title>
-   <meta charset="utf-8">
+  <title>title</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="style.css">
  </head>
- <body>
-  <p>text</p>
- </body> 
+  <body>
+   <p>text</p>
+  </body> 
 </html>
