--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
  <head>
-  <title>title</title>
+  <title>developer's portfolio websoft hcm (webtutor)</title>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="style.css">
  </head>
   <body>
-   <p>text</p>
+   <t1>developer's portfolio websoft hcm (webtutor)</t1>
   </body> 
 </html>
