--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <link rel="stylesheet" type="text/css" href="style.css">
  </head>
   <body>
-   <t1>developer's portfolio websoft hcm (webtutor)</t1>
+   <t>developer's portfolio websoft hcm (webtutor)</t>
   </body> 
 </html>
