--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <link rel="stylesheet" type="text/css" href="style.css">
  </head>
   <body>
-   <h1 class="text">developer's portfolio websoft hcm (webtutor)</h1>
+   <h1 class="headTitle">developer's portfolio websoft hcm (webtutor)</h1>
   </body> 
 </html>
