--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
   <link rel="stylesheet" type="text/css" href="style.css">
  </head>
   <body>
-   <h1 class="headTitle">developer's portfolio websoft hcm (webtutor)</h1>
+
+    <div class="header">
+      <h1 class="head_title">developer's portfolio websoft hcm (webtutor)</h1>
+    </div>
+
+    <div class="content">
+      <div>content</div>
+    </div>
+
+    <div class="footer">footer</div>
+
   </body> 
 </html>
