--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     </div>
 
     <div class="content">
-      <div>content</div>
+      <div class="box">content 1</div>
+      <div class="box">content 2</div>
+      <div class="box">content 3</div>
     </div>
 
     <div class="footer">footer</div>
