--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
     </div>
 
     <div class="content">
-      <div class="box">content 1</div>
-      <div class="box">content 2</div>
-      <div class="box">content 3</div>
+      <div class="cbox">content 1</div>
+      <div class="cbox">content 2</div>
+      <div class="cbox">content 3</div>
+      <div class="cbox">content 4</div>
     </div>
 
-    <div class="footer">footer</div>
+    <div class="footer">footer
+     <div class="fbox">footer</div>
+    </div>
 
   </body> 
 </html>
