--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     </div>
 
     <div class="footer">footer
-     <div class="fbox">footer</div>
+     <div class="fbox">content 1</div>
+     <div class="fbox">content 2</div>
+     <div class="fbox">content 3</div>
     </div>
 
   </body> 
