--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <title>developer's portfolio websoft hcm (webtutor)</title>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <script data-require="jquery" data-semver="2.1.1" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="scroll.js"></script>
  </head>
   <body>
 
