--- a/index.html
+++ b/index.html
@@ -14,10 +14,20 @@
     </div>
 
     <div class="content">
+
+      <div class="left">left div
+        <button id="left-button">swipe left</button>
+      </div>
+
       <div class="cbox">content 1</div>
       <div class="cbox">content 2</div>
       <div class="cbox">content 3</div>
       <div class="cbox">content 4</div>
+
+      <div class="right">right div
+        <button id="right-button">swipe right</button>
+      </div>
+
     </div>
 
     <div class="footer">footer
