--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 
     <div class="content">
 
-      <div class="left">left div
-        <button id="left-button">swipe left</button>
+      <div class="button_left">
+        <button id="left-button"> < </button>
+      </div>
+
+      <div class="button_right">
+        <button id="right-button"> > </button>
       </div>
 
       <div class="cbox">content 1</div>
       <div class="cbox">content 2</div>
       <div class="cbox">content 3</div>
       <div class="cbox">content 4</div>
-
-      <div class="right">right div
-        <button id="right-button">swipe right</button>
-      </div>
 
     </div>
 
