--- a/banners.html
+++ b/banners.html
@@ -1,38 +1,30 @@
-<html><head>
+<html>
+  <head>
   <title>developer's portfolio websoft hcm (webtutor)</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style.css">
-
- <style type="text/css" id="operaUserStyle"></style></head>
+  <style type="text/css" id="operaUserStyle"></style>
+</head>
   <body>
 
-    <div class="header">
-      <h1 class="head_title">developer's portfolio websoft hcm (webtutor)</h1>
-    </div>
-
-    <div class="content">
-
-      <div class="button_left">
-        <button id="left-button"> &lt; </button>
+    <div id="main_box_banner">
+      
+      <div id="left_box_banner">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+        <div>5</div>
+        <div>6</div>
       </div>
 
-      <div class="button_right">
-        <button id="right-button"> &gt; </button>
+      <div id="right_box_banner">
+        <div>1</div>
       </div>
 
-      <div class="cbox">content 1</div>
-      <div class="cbox">content 2</div>
-      <div class="cbox">content 3</div>
-      <div class="cbox">content 4</div>
-
     </div>
-
-    <div class="footer">footer
-     <div class="fbox">content 1</div>
-     <div class="fbox">content 2</div>
-     <div class="fbox">content 3</div>
-    </div>
+    
 
   
 
@@ -40,4 +32,5 @@
   <script src="scroll.js"></script>
 
 
-</body></html>
+</body>
+</html>
