--- a/main.html
+++ b/main.html
@@ -71,7 +71,7 @@
 		  <div id="right_box_card" class="right_box_card">
 			<div class="right_card">
 				<div class="right_card_ava_up_box">
-					<div class="right_card_ava"><div class="right_card_ava_border"><img alt="" src="Peter_Norton.jpg"></div></div>
+					<div class="right_card_ava"><div class="right_card_ava_border" style="background-image: url(Peter_Norton.jpg);"></div></div>
 					<div class="right_card_ava_up"><span>✎</span></div>
 				</div>
 				<div class="right_card_fio user_info">Анисимов Юрий Владимирович</div>
@@ -83,7 +83,7 @@
 		</div>
 	</div>
 	
-<!-- news -->
+<!-- news del news_img--> 
 
 	<div id="main_box_news" class="main_box_news">
 		<div class="box_news">
@@ -92,13 +92,13 @@
 		<div class="box_news_cards">
 			<div class="news_but_left" onclick="scrollLft()">&#8249;</div>
 				<section id="sec_news" class="news_cards">
-				  <div class="news_card"><a href="#1"><div class="news_img"><img src="олимп 1.png" alt=""></div><div class="news_title">Новость олимпиада качества</div></a></div>
-				  <div class="news_card"><a href="#2"><div class="news_img"><img src="пакет док 2.png" alt=""></div><div class="news_title">Новость Социальный пакет</div></a></div>
-				  <div class="news_card"><a href="#3"><div class="news_img"><img src="Обучение курсы 1.png" alt=""></div><div class="news_title">Новость Обучение</div></a></div>
-				  <div class="news_card"><a href="#4"><div class="news_img"><img src="оценка 3 1.png" alt=""></div><div class="news_title">Новость Оценка</div></a></div>
-				  <div class="news_card"><a href="#5"><div class="news_img"><img src="адаптация и подбор 1.png" alt=""></div><div class="news_title">Новость Адаптация и подбор</div></a></div>
-				  <div class="news_card"><a href="#6"><div class="news_img"><img src="молодежь политика 2.png" alt=""></div><div class="news_title">Новость Молодёжная политика</div></a></div>
-				  <div class="news_card"></div>
+				  <div class="view_card"><a href="#1" class="news_link"><div class="news_card" style="background-image: url(news1.png);"></div></a><div class="news_title">Новость олимпиада качества</div></div>
+				  <div class="view_card"><a href="#1" class="news_link"><div class="news_card" style="background-image: url(news2.png);"></div></a><div class="news_title">Will create a disconnect between the visual presentation of content and</div></div>
+				  <div class="view_card"><a href="#1" class="news_link"><div class="news_card" style="background-image: url(news3.png);"></div></a><div class="news_title">Новость Обучение</div></div>
+				  <div class="view_card"><a href="#1" class="news_link"><div class="news_card" style="background-image: url(news4.png);"></div></a><div class="news_title">This will adversely affect users experiencing low vision navigating with the aid of assistive technology such as a screen reader</div></div>
+				  <div class="view_card"><a href="#1" class="news_link"><div class="news_card" style="background-image: url(news5.png);"></div></a><div class="news_title">Новость Адаптация и подбор</div></div>
+				  <div class="view_card"><a href="#1" class="news_link"><div class="news_card" style="background-image: url(news6.png);"></div></a><div class="news_title">Новость Молодёжная политика</div></div>
+				  <div class="view_card"><div class="news_card"></div></div>
 				</section>
 			<div class="news_but_right" onclick="scrollRight()">&#8250;</div>
 		</div>
@@ -120,7 +120,7 @@
 
 //slider
 
-	sek = 3000;
+	sek = 333000;
 
 	var slideIndex = 1;
 	showSlides(slideIndex);
