--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <body>
 
     <div class="header">
-      <h1 class="head_title">developer's portfolio websoft hcm (webtutor)</h1>
+      <h1 class="head_title">dev websoft hcm</h1>
     </div>
-
+<!--
     <div class="content">
 
       <div class="button_left">
@@ -35,7 +35,7 @@
      <div class="fbox">content 2</div>
      <div class="fbox">content 3</div>
     </div>
-
+-->
   </body>
 
   <script data-require="jquery" data-semver="2.1.1" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
